--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ deploy:
   #password: azure_deployment_password   # If AZURE_WA_PASSWORD isn't set
   #site: azure_deployment_sitename       # If AZURE_WA_SITE isn't set
   #slot: azure_deployment_slotname       # (optional) If AZURE_WA_SLOT isn't set
+  verbose: true
   on:
     branch: master
