--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ before_install:
   - docker build -t jireymendez/client -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true jireymendez/client npm run test 
+  - docker run -e CI=true jireymendez/client npm run test -- --coverage
 
 deploy:
   provider: azure_web_apps
+  username: "$AZURE_WA_USERNAME"
+  password: "$AZURE_WA_PASSWORD"
   #username: azure_deployment_user       # If AZURE_WA_USERNAME isn't set
   #password: azure_deployment_password   # If AZURE_WA_PASSWORD isn't set
   #site: azure_deployment_sitename       # If AZURE_WA_SITE isn't set
