--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ deploy:
   username: "$AZURE_WA_USERNAME"
   password: "$AZURE_WA_PASSWORD"
   site: "$AZURE_WA_SITE"
+  edge: true
   #username: azure_deployment_user       # If AZURE_WA_USERNAME isn't set
   #password: azure_deployment_password   # If AZURE_WA_PASSWORD isn't set
   #site: azure_deployment_sitename       # If AZURE_WA_SITE isn't set
