--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,10 @@ services:
   - docker
 
 before_install:
-  #- docker build -t jireymendez/client -f Dockerfile.dev .
-  docker build .
+  - docker build -t jireymendez/client -f Dockerfile.dev .
 
 script:
-  #- docker run -e CI=true jireymendez/client npm run test -- --coverage
+  - docker run -e CI=true jireymendez/client npm run test -- --coverage
 
 deploy:
   provider: azure_web_apps
